messages tab, little js for eliminate conflicts between tabs

--- a/index.html
+++ b/index.html
@@ -94,7 +94,34 @@
 						</div>
 					</div>
 				</div>
-				<div class="tap-pane fade" id="messages" role="tab-panel" aria-labelledby="profile-tab">messages</div>
+				<div class="tap-pane fade messages" id="messages" role="tab-panel" aria-labelledby="messages-tab">
+					<h3 class="text-center">Messages</h3>
+					<div class="container bg-light py-3 my-3 mt-5">
+						<a href="#"> Helena </a>
+						<p>Hey team, just a heads up, I've pushed the latest updates to the repository. Don't forget to pull before you start
+						working on your tasks! Let me know if you encounter any issues.</p>
+					</div>
+					<div class="container bg-light py-3 my-3">
+						<a href="#"> Mark </a>
+						<p>I've scheduled a quick sync-up meeting for tomorrow morning to discuss the progress on the new feature implementation.
+						Please make sure to attend if you're involved. Thanks!</p>
+					</div>
+					<div class="container bg-light py-3 my-3">
+						<a href="#"> Jason </a>
+						<p>Morning Vitalii, I've identified a bug in the login module. I'll be working on fixing it today. If you have any
+						suggestions or insights, feel free to share. Let's squash this bug together</p>
+					</div>
+					<div class="container bg-light py-3 my-3">
+						<a href="#"> Emily </a>
+						<p>Just wanted to remind you to update your development environment with the latest dependencies. We've upgraded a few
+						libraries, so make sure everything is up-to-date before you proceed. Happy coding!</p>
+					</div>
+					<div class="container bg-light py-3 my-3">
+						<a href="#"> Alex</a>
+						<p>Hey, I've just completed the documentation for the API endpoints. Take a look and let me know if there are
+						any discrepancies or missing details. Your feedback is much appreciated!</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
